# JOB-20260528120000-000054

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
migrations/: 001_create_sku_map.sql
scripts/: run_sync.py
src/: __init__.py  config.py  db.py  inventory_sync.py  mintsoft_client.py  models.py  slack_hil_client.py  veeqo_client.py
src/agents/: crew_setup.py  prompts.py
tests/: test_balance_agent.py  test_mintsoft_client.py  test_sku_mapping.py  test_veeqo_client.py
tests/mock_data/: fba_stock.json  mintsoft_inventory.json  veeqo_inventory.json
