[project]
name = "inventory-agent"
version = "0.1.0"
description = "Multi-Warehouse AI Agentic Inventory Controller (Veeqo & Mintsoft)"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "slack-sdk>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true